# Optimized-Bin-Difference

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: coffee_barley_example.py  quickstart.py
ga_obd_plsr/: __init__.py  features.py  ga.py  metrics.py  model.py  plotting.py  preprocessing.py
tests/: test_ga_obd_plsr.py
