[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ga-obd-plsr"
version = "0.1.0"
description = "Genetic Algorithm Optical Band Difference feature selection for PLS Regression on NIR spectra"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "scipy>=1.7",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]
plots = ["seaborn", "plotly"]

[project.urls]
Homepage = "https://github.com/your-username/ga-obd-plsr"
Issues   = "https://github.com/your-username/ga-obd-plsr/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ga_obd_plsr*"]
